--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Mengyu Ding / Academic Personal Page"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Mengyu (Derek) Ding"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,9 +26,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "University College London"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "mengyu.ding.23@ucl.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
