--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Mengyu Ding / Academic Personal Page"
 title_separator          : "-"
 name                     : &name "Mengyu (Derek) Ding"
 description              : &description "personal description"
-url                      : https://dereksgithub.github.io/personalgithubpage/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://dereksgithub.github.io/personalgithubpage # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/dereksgithub/personalgithubpage"
 
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/derek-ding-2a0993200/"
+  linkedin         : "derek-ding-2a0993200"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
